--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <div class="project-card">
         <h3>Portafolio Profesional</h3>
         <p>Diseño limpio y responsivo para mostrar experiencia y servicios.</p><br>
-        <a href="#" class="btn">VER PROYECTO</a>
+        <a href="https://ruizbau1.github.io/portafolioweb/" class="btn">VER PROYECTO</a>
       </div>
     </div>
   </section>
